# village-report-generator

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: deploy.yml  docs_build_and_deploy.yml  test_and_deploy.yml
docs/: index.html
docs/quarto_files/: hernando_visual_and_COT_2025-07-14.html  hernando_visual_and_COT_2025-07-14.qmd  hernando_visual_and_COT_2025-07-15.html  hernando_visual_and_COT_2025-07-15.qmd  hernando_visual_and_COT_2025-07-16.html  hernando_visual_and_COT_2025-07-16.qmd  hernando_visual_and_COT_2025-07-17.html  hernando_visual_and_COT_2025-07-17.qmd  hernando_visual_and_COT_2025-07-18.qmd  hernando_visual_and_COT_2025-07-19.qmd  hernando_visual_and_COT_2025-07-20.qmd  hernando_visual_and_COT_2025-07-21.qmd  hernando_visual_and_COT_2025-07-22.qmd  hernando_visual_and_COT_2025-07-23.qmd  hernando_visual_and_COT_2025-07-24.qmd  hernando_visual_and_COT_2025-07-25.qmd  hernando_visual_and_COT_2025-07-26.qmd  hernando_visual_and_COT_2025-07-27.qmd  hernando_visual_and_COT_2025-07-28.qmd  hernando_visual_and_COT_2025-07-29.qmd  hernando_visual_and_COT_2025-07-30.qmd  hernando_visual_and_COT_2025-07-31.qmd  hernando_visual_and_COT_2025-08-01.qmd  hernando_visual_and_COT_2025-08-02.qmd  hernando_visual_and_COT_2025-08-03.qmd  hernando_visual_and_COT_2025-08-04.qmd  hernando_visual_and_COT_2025-08-05.qmd  hernando_visual_and_COT_2025-08-06.qmd  hernando_visual_and_COT_2025-08-07.qmd  hernando_visual_and_COT_2025-08-08.qmd  hernando_visual_and_COT_2025-08-09.qmd  hernando_visual_and_COT_2025-08-10.qmd  hernando_visual_and_COT_2025-08-11.qmd  hernando_visual_and_COT_2025-08-12.qmd  hernando_visual_and_COT_2025-08-13.qmd  hernando_visual_and_COT_2025-08-14.qmd  hernando_visual_and_COT_2025-08-15.qmd  hernando_visual_and_COT_2025-08-16.qmd  hernando_visual_and_COT_2025-08-17.qmd  hernando_visual_and_COT_2025-08-18.qmd  (+10 more)
docs/quarto_files/hernando_visual_and_COT_2025-07-16_files/libs/bootstrap/: bootstrap-32581337c6a65035ded1d741214dc543.min.css
docs/source/: api_index.rst  conf.py  index.rst
village_report_generator/: __init__.py  generate_quarto_file.py  update_index.py  village_report_generator.py
village_report_generator/active_configuration_files/: hernando_visual_and_COT.json  userA_projectA.json  userC_projectB.json_BU
village_report_generator/quarto_templates/: visual_and_COT_quarto_general_template.txt  visual_and_COT_quarto_general_template_test.txt  visual_and_COT_quarto_subject_template.txt
